--- a/WebApi/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebApi/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -20,6 +20,9 @@
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
             <a class="nav-link text-dark" [routerLink]='["/pais"]'>Pais</a>
           </li>
+          <li class="nav-item" [routerLinkActive]='["link-active"]'>
+            <a class="nav-link text-dark" [routerLink]='["/entrar"]'>Login</a>
+          </li>
         </ul>
       </div>
     </div>
