--- a/WebApi/ClientApp/src/app/usuario/login/login.component.html
+++ b/WebApi/ClientApp/src/app/usuario/login/login.component.html
@@ -2,9 +2,18 @@
   <form class="form-signin">
     <h4 class="h4 mb-2 login">Login do Cliente</h4>
     <label for="inputEmail" class="sr-only">E-mail</label>
-    <input type="email" id="inputEmail" name="email" placeholder="Informe seu E-mail" class="form-control mb-2" />
+    <input type="email" id="inputEmail" name="email" placeholder="Informe seu Email" class="form-control mb-2" [(ngModel)]="usuario.email" #email="ngModel" email required/>
+    <div class="alert alert-danger" *ngIf="email.invalid && (email.dirty || email.touched)">
+      <div *ngIf="email.errors.required">
+        Email é de Preencimento Obrigatório !
+      </div>
+      <div *ngIf="email.errors.email">
+        Email tem que possuir um formato válido !
+      </div>
+    </div>
     <label for="inputSenha" class="sr-only">Senha</label>
-    <input type="password" id="inputSenha" name="senha" placeholder="Informe sua Senha" class="form-control mb-2" />
-    <button class="btn btn-primary btn-block" type="submit">Entrar</button>
+    <input type="password" id="inputSenha" name="senha" placeholder="Senha" class="form-control mb-2" [(ngModel)]="usuario.senha" #senha="ngModel"/>
+    <button class="btn btn-primary btn-block" type="submit" (click)="entrar()">Entrar</button>
+    <img src="../../../assets/img/logon.jpg" />
   </form>
 </div>
