--- a/WebApi/ClientApp/src/app/usuario/login/login.component.html
+++ b/WebApi/ClientApp/src/app/usuario/login/login.component.html
@@ -2,8 +2,13 @@
   <form class="form-signin">
     <h4 class="h4 mb-2 login">Login do Cliente</h4>
     <label for="inputEmail" class="sr-only">E-mail</label>
-    <input type="email" id="inputEmail" name="email" placeholder="Informe seu Email" class="form-control mb-2" [(ngModel)]="usuario.email" #email="ngModel" email required/>
-    <div class="alert alert-danger" *ngIf="email.invalid && (email.dirty || email.touched)">
+    <input type="email" id="inputEmail" name="email" placeholder="Informe seu Email" class="form-control mb-2" [ngClass]="
+           {
+           'is-invalid': email.invalid && (email.dirty || email.touched),
+           'is-valid': email.valid && (email.dirty || email.touched)
+           }"
+           [(ngModel)]="usuario.email" #email="ngModel" email required />
+    <div class="invalid-feedback mb-2" *ngIf="email.invalid && (email.dirty || email.touched)">
       <div *ngIf="email.errors.required">
         Email é de Preencimento Obrigatório !
       </div>
@@ -12,7 +17,17 @@
       </div>
     </div>
     <label for="inputSenha" class="sr-only">Senha</label>
-    <input type="password" id="inputSenha" name="senha" placeholder="Senha" class="form-control mb-2" [(ngModel)]="usuario.senha" #senha="ngModel"/>
+    <input type="password" id="inputSenha" name="senha" placeholder="Senha" class="form-control mb-2" [ngClass]="
+           {
+           'is-invalid': senha.invalid && (senha.dirty || senha.touched),
+           'is-valid': senha.valid && (senha.dirty || senha.touched)
+           }"
+           [(ngModel)]="usuario.senha" #senha="ngModel" required />
+    <div class="invalid-feedback mb-2" *ngIf="senha.invalid && (senha.dirty || senha.touched)">
+      <div *ngIf="senha.errors.required">
+        Senha é Obrigatória
+      </div>
+    </div>
     <button class="btn btn-primary btn-block" type="submit" (click)="entrar()">Entrar</button>
     <img src="../../../assets/img/logon.jpg" />
   </form>
