--- a/WebApi/ClientApp/src/app/usuario/cadastro/cadastro.usuario.component.html
+++ b/WebApi/ClientApp/src/app/usuario/cadastro/cadastro.usuario.component.html
@@ -1,10 +1,68 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
+<div class="text-center">
+  <form class="form-signin">
+    <h4 class="h4 mb-2 login">Criar Conta</h4>
+    <label for="inputEmail" class="sr-only">E-mail</label>
+    <input type="email" id="inputEmail" name="email" placeholder="Email" class="form-control mb-2" [ngClass]="
+           {
+           'is-invalid': email.invalid && (email.dirty || email.touched),
+           'is-valid': email.valid && (email.dirty || email.touched)
+           }"
+           [(ngModel)]="usuario.email" #email="ngModel" email required />
+    <div class="invalid-feedback mb-2" *ngIf="email.invalid && (email.dirty || email.touched)">
+      <div *ngIf="email.errors.required">
+        Email é de Preencimento Obrigatório !
+      </div>
+      <div *ngIf="email.errors.email">
+        Email tem que possuir um formato válido !
+      </div>
+    </div>
+    <label for="inputSenha" class="sr-only">Senha</label>
+    <input type="password" id="inputSenha" name="senha" placeholder="Senha" class="form-control mb-2" [ngClass]="
+           {
+           'is-invalid': senha.invalid && (senha.dirty || senha.touched),
+           'is-valid': senha.valid && (senha.dirty || senha.touched)
+           }"
+           [(ngModel)]="usuario.senha" #senha="ngModel" required />
+    <div class="invalid-feedback mb-2" *ngIf="senha.invalid && (senha.dirty || senha.touched)">
+      <div *ngIf="senha.errors.required">
+        Senha é Obrigatória
+      </div>
+    </div>
 
-</body>
-</html>
+    <label for="inputNome" class="sr-only">Nome</label>
+    <input type="text" id="inputNome" name="nome" placeholder="Nome" class="form-control mb-2" [ngClass]="
+           {
+           'is-invalid': nome.invalid && (nome.dirty || nome.touched),
+           'is-valid': nome.valid && (nome.dirty || nome.touched)
+           }"
+           [(ngModel)]="usuario.nome" #nome="ngModel" required />
+    <div class="invalid-feedback mb-2" *ngIf="nome.invalid && (nome.dirty || nome.touched)">
+      <div *ngIf="nome.errors.required">
+        Nome é de Preencimento Obrigatório !
+      </div>
+    </div>
+
+    <label for="inputSobreNome" class="sr-only">Sobrenome</label>
+    <input type="text" id="inputSobreNome" name="sobreNome" placeholder="Sobrenome" class="form-control mb-2" [ngClass]="
+           {
+           'is-invalid': sobreNome.invalid && (sobreNome.dirty || sobreNome.touched),
+           'is-valid': sobreNome.valid && (sobreNomedirty || sobreNome.touched)
+           }"
+           [(ngModel)]="usuario.sobreNome" #sobreNome="ngModel" required />
+    <div class="invalid-feedback mb-2" *ngIf="sobreNome.invalid && (sobreNome.dirty || sobreNome.touched)">
+      <div *ngIf="sobreNome.errors.required">
+        Sobrenome é de Preencimento Obrigatório !
+      </div>
+
+    </div>
+    <button class="btn btn-primary btn-block" type="submit" (click)="cadastrar()">
+      <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+      Cadastrar
+    </button>
+    <div><a [routerLink]='["/entrar"]'>Voltar</a></div>
+    <div class="alert alert-danger" *ngIf="mensagem">
+      {{mensagem}}
+    </div>
+    <img src="../../../assets/img/logon.jpg" />
+  </form>
+</div>
