--- a/WebApi/ClientApp/src/app/usuario/login/login.component.html
+++ b/WebApi/ClientApp/src/app/usuario/login/login.component.html
@@ -30,7 +30,9 @@
     </div>
     <button class="btn btn-primary btn-block" type="submit" (click)="entrar()">
       <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-    Entrar</button>
+      Entrar
+    </button>
+    <div>Novo por aqui ? <a [routerLink]='["/novo-usuario"]'>Cadastre-se</a></div>
     <div class="alert alert-danger" *ngIf="mensagem">
       {{mensagem}}
     </div>
