--- a/WebApi/ClientApp/src/app/usuario/cadastro/cadastro.usuario.component.html
+++ b/WebApi/ClientApp/src/app/usuario/cadastro/cadastro.usuario.component.html
@@ -55,13 +55,16 @@
       </div>
 
     </div>
-    <button class="btn btn-primary btn-block" type="submit" (click)="cadastrar()">
-      <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+    <button class="btn btn-primary btn-block" type="submit" (click)="cadastrar()" [disabled]="ativar_spinner">
+      <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" *ngIf="ativar_spinner"></span>
       Cadastrar
     </button>
     <div><a [routerLink]='["/entrar"]'>Voltar</a></div>
     <div class="alert alert-danger" *ngIf="mensagem">
       {{mensagem}}
+    </div>
+    <div class="alert alert-success" *ngIf="usuarioCadastrado">
+      Usuário cadastrado com sucesso!<a class="alert-link" [routerLink]='["/entrar"]'>clique Aqui</a>
     </div>
     <img src="../../../assets/img/logon.jpg" />
   </form>
