--- a/WebApi/ClientApp/src/app/pais/pesquisa/pesquisa.pais.component.html
+++ b/WebApi/ClientApp/src/app/pais/pesquisa/pesquisa.pais.component.html
@@ -1,2 +1,12 @@
 <h1 class="h4 titulo">Pesquisa de Paises</h1>
 <p *ngIf="!produtos">Carregando Paises</p>
+
+<table class="table table-hover" *ngIf="produtos">
+  <thead>
+    <tr>
+      <th>Código</th>
+      <th>Nome</th>
+      <th>Observação</th>
+    </tr>
+  </thead>
+</table>
